# apex-ml

./: .dockerignore  .env.example  .gitignore  .python-version  README.md  claude.md  generate_readme.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  daily-data-load.yml  generate-readme.yml  refresh-f1-data.yml  terraform-deploy.yml
app/: ai_assistant.py  app.py  constants.py  ml_predictions.py  query_builder.py  visualizations.py
app/ml/: __init__.py  ai_assistant.py  ml_predictions.py  prediction_service.py
infra/: .terraform.lock.hcl  billing_alerts.tf  main.py  main.tf  outputs.tf  pyproject.toml  terraform.tfstate  terraform.tfstate.backup  variables.tf
infra/snowflake/: .terraform.lock.hcl  07_dev_stored_procedures.tf  08_dev_streams.tf  09_dev_tasks.tf  README.md  SETUP.md  data_promotion.tf  grants.tf  main.py  main.tf  outputs.tf  pyproject.toml  setup_roles.sql  stored_procedures.tf  streams_and_tasks.tf  tables.tf  variables.tf
scripts/: generate_readme.py  run_dbt.sh  setup_snowflake_keypair.sh
snowflake/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
snowflake/elt/: extract.py  load.py  load_by_year.py  load_historical.py  load_new_data.py  refresh_latest.py
snowflake/procedures/: stored_procedure_dbt_transformations_dev.sql  stored_procedure_dbt_transformations_prod.sql  stored_procedure_dbt_transformations_staging.sql
snowflake/streams/: create_raw_sessions_stream.sql  stream_dbt_transformations_dev.sql  stream_dbt_transformations_prod.sql  (+1 more)
tests/: test_apy.py  test_connection.py  test_data_loads.py
(+23 files in other folders)
