[project]
name = "apex-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dbt-core>=1.10.13",
    "dbt-snowflake>=1.10.2",
    "httpx>=0.28.1",
    "snowflake-connector-python>=3.18.0",
    "pytest>=8.3.4",
    "streamlit>=1.40.2",
    "plotly>=6.5.0",
]

[tool.uv.workspace]
members = [
    "tests",
    "infra/snowflake",
    "library",
]
